# CybelEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: CybelEngineConfig.cmake.in
cmake/modules/cybel/: Cppcheck.cmake  CustomTargets.cmake
examples/: 00_window.cpp  CMakeLists.txt  common.h
src/cybel/: common.h  cybel_engine.cpp  cybel_engine.h  game.h
src/cybel/asset/: asset_loader.h  asset_loader_key.h  asset_loaders.cpp  asset_loaders.h  asset_man.cpp  asset_man.h  asset_man_key.h  asset_types.h  font_atlas_ref.cpp  font_atlas_ref.h  sprite_ref.cpp  sprite_ref.h  texture_ref.cpp  texture_ref.h
src/cybel/audio/: audio.cpp  audio.h  audio_player.cpp  audio_player.h  music.cpp  music.h  sound.cpp  sound.h
src/cybel/gfx/: font_atlas.cpp  font_atlas.h  gl_util.cpp  gl_util.h  gpu_context_key.h  image.cpp  image.h  renderer.cpp  renderer.h  renderer_gl.cpp  renderer_gl.h  renderer_gles.cpp  renderer_gles.h  sprite.cpp  sprite.h  sprite_atlas.cpp  sprite_atlas.h  texture.cpp  texture.h
src/cybel/input/: game_ctrl.cpp  game_ctrl.h  input_man.cpp  input_man.h  input_types.h  joypad_input.h  joystick.cpp  joystick.h  key_input.cpp  key_input.h
src/cybel/io/: text_reader.cpp  text_reader.h  text_reader_buf.cpp  text_reader_buf.h
src/cybel/metrics/: metric_man.cpp  metric_man.h
src/cybel/scene/: scene.h  scene_bag.cpp  scene_bag.h  scene_context.h  scene_man.cpp  scene_man.h  scene_types.h
src/cybel/str/utf8/: rune_iterator.h  str_util.cpp
src/cybel/stubs/: glew_stub.cpp  glew_stub.h
src/cybel/text/: rune_iterator.cpp  rune_iterator.h  rune_token.cpp  rune_token.h  rune_util.cpp  rune_util.h  rune_view.cpp  rune_view.h  text_util.cpp  text_util.h
src/cybel/types/: color.cpp  color.h  cybel_error.cpp  cybel_error.h  duration.cpp  duration.h  frame_step.h  id_concepts.h  pos.h  range.cpp  range.h  size.h  view_dimens.h
src/cybel/ui/: ui_box_node.cpp  ui_box_node.h  ui_flex_grid.cpp  ui_flex_grid.h  ui_layout.h  ui_node.h  ui_quad.cpp  ui_quad.h  ui_sprite.cpp  ui_sprite.h  ui_texture.cpp  ui_texture.h
src/cybel/util/: algo_util.h  file_sys.cpp  file_sys.h  rando.cpp  rando.h  ticker.h  timer.cpp  timer.h  tween.h  util.cpp  util.h
src/cybel/vfx/: particle.cpp  particle.h
vcpkg/cybel-engine/: portfile.cmake  usage  vcpkg.json
